--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js" integrity="sha256-9zljDKpE/mQxmaR4V2cGVaQ7arF3CcXxarvgr7Sj8Uc=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -637,7 +638,7 @@
                         </div>
                         <p id="slide-elem">Під час початкової консультації ми обговоримо ваші бізнес-цілі та завдання, цільову аудиторію та поточні маркетингові зусилля. Це дозволить нам зрозуміти ваші потреби та адаптувати наші послуги для найкращого відповідності вашим вимогам.</p>
                     </div>
-                    <div class="block">
+                    <div class="block work-block">
                         <div class="text">
                             <div>
                                 <h1>02</h1>
@@ -645,9 +646,9 @@
                             </div>
                             <button class="open-content"></button>
                         </div>
-                        <p>Цей етап включає аналіз ринку, вивчення конкурентів, поведінки цільової аудиторії та визначення ключових можливостей для вашого бізнесу. На основі отриманих даних розробляється індивідуальна стратегія, яка враховує ваші цілі, ресурси та поточну ситуацію на ринку.</p>
+                        <p id="slide-elem">Цей етап включає аналіз ринку, вивчення конкурентів, поведінки цільової аудиторії та визначення ключових можливостей для вашого бізнесу. На основі отриманих даних розробляється індивідуальна стратегія, яка враховує ваші цілі, ресурси та поточну ситуацію на ринку.</p>
                     </div>
-                    <div class="block">
+                    <div class="block work-block">
                         <div class="text">
                             <div>
                                 <h1>03</h1>
@@ -655,9 +656,9 @@
                             </div>
                             <button class="open-content"></button>
                         </div>
-                        <p>На цьому етапі стратегія починає реалізовуватися. Включає виконання запланованих дій, таких як запуск маркетингових кампаній, створення контенту, налаштування реклами або впровадження інших бізнес-рішень.</p>
+                        <p id="slide-elem">На цьому етапі стратегія починає реалізовуватися. Включає виконання запланованих дій, таких як запуск маркетингових кампаній, створення контенту, налаштування реклами або впровадження інших бізнес-рішень.</p>
                     </div>
-                    <div class="block">
+                    <div class="block work-block">
                         <div class="text">
                             <div>
                                 <h1>04</h1>
@@ -665,9 +666,9 @@
                             </div>
                             <button class="open-content"></button>
                         </div>
-                        <p>Постійне відстеження результатів, отриманих під час реалізації стратегії. Включає аналіз ключових показників, визначення сильних і слабких сторін та внесення змін для досягнення кращої ефективності.</p>
+                        <p id="slide-elem">Постійне відстеження результатів, отриманих під час реалізації стратегії. Включає аналіз ключових показників, визначення сильних і слабких сторін та внесення змін для досягнення кращої ефективності.</p>
                     </div>
-                    <div class="block">
+                    <div class="block work-block">
                         <div class="text">
                             <div>
                                 <h1>05</h1>
@@ -675,9 +676,9 @@
                             </div>
                             <button class="open-content"></button>
                         </div>
-                        <p>Регулярна підготовка звітів, що відображають результати виконаної роботи, досягнуті цілі та подальші рекомендації. Комунікація з клієнтами або командою для узгодження наступних дій та стратегій.</p>
+                        <p id="slide-elem">Регулярна підготовка звітів, що відображають результати виконаної роботи, досягнуті цілі та подальші рекомендації. Комунікація з клієнтами або командою для узгодження наступних дій та стратегій.</p>
                     </div>
-                    <div class="block">
+                    <div class="block work-block">
                         <div class="text">
                             <div>
                                 <h1>06</h1>
@@ -685,7 +686,7 @@
                             </div>
                             <button class="open-content"></button>
                         </div>
-                        <!-- <p>Процес регулярного аналізу та вдосконалення стратегій і процесів. Це дозволяє вашому бізнесу адаптуватися до змін у ринку, забезпечуючи стабільний і довгостроковий розвиток.</p> -->
+                        <p id="slide-elem">Процес регулярного аналізу та вдосконалення стратегій і процесів. Це дозволяє вашому бізнесу адаптуватися до змін у ринку, забезпечуючи стабільний і довгостроковий розвиток.</p>
                     </div>
                 </div>
             </section>
