block team - added

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             </section>
             <section class="work-procces">
                 <div class="subtext">
-                    <h2 class="green-head" style="width: 64%;" >Наш робочий процес</h2>
+                    <h2 class="green-head" style="width: 64%;">Наш робочий процес</h2>
                     <p>Покрокова інструкція досягнення бізнес-цілей</p>
                 </div>
                 <div class="main">
@@ -684,6 +684,95 @@
                         </div>
                         <p id="slide-elem">Процес регулярного аналізу та вдосконалення стратегій і процесів. Це дозволяє вашому бізнесу адаптуватися до змін у ринку, забезпечуючи стабільний і довгостроковий розвиток.</p>
                     </div>
+                </div>
+            </section>
+            <section class="team">
+                <div class="subtext">
+                    <h2 class="green-head">Команда</h2>
+                    <p>Знайомтеся з досвідченою та професійною командою, яка стоїть за нашими успішними стратегіями цифрового</p>
+                </div>
+                <div class="main">
+                    <div class="grid">
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team1.png" alt="">
+                                <div class="text">
+                                    <h4>Джон Сміт</h4>
+                                    <p>Засновник та генеральний директор</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 10 років досвіду в цифровому маркетингу. Експертиза в SEO, PPC та контент-стратегії.</p>
+                        </div>
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team2.png" alt="">
+                                <div class="text">
+                                    <h4>Джейн Доу</h4>
+                                    <p>Директор з операційної діяльності</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 7 років досвіду в управлінні проєктами та керівництві командами. Відмінні організаційні та комунікаційні навички.</p>
+                        </div>
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team3.png" alt="">
+                                <div class="text">
+                                    <h4>Міхаел Броун</h4>
+                                    <p>Старший спеціаліст з SEO</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 5 років досвіду в SEO та створенні контенту. Володіння ключовими аспектами дослідження ключових слів та внутрішньої оптимізації.</p>
+                        </div>
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team4.png" alt="">
+                                <div class="text">
+                                    <h4>Емілі Джонсон</h4>
+                                    <p>Менеджер з контекстної реклами</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 3 роки досвіду в контекстній рекламі. Навички управління кампаніями та аналізу їхньої ефективності.</p>
+                        </div>
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team5.png" alt="">
+                                <div class="text">
+                                    <h4>Браян Увіліамс</h4>
+                                    <p>Спеціаліст із соціальних мереж</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 4 роки досвіду в маркетингу в соціальних мережах. Вміння створювати та планувати контент, аналізувати метрики та підвищувати залученість аудиторії.</p>
+                        </div>
+                        <div class="block">
+                            <div class="top">
+                                <img src="image/team/team6.png" alt="">
+                                <div class="text">
+                                    <h4>Сара Кім</h4>
+                                    <p>Контент-креатор</p>
+                                </div>
+                                <button class="linkedIN">
+                                    <img src="image/in.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Понад 2 роки досвіду у написанні та редагуванні текстів. Навички створення привабливого, SEO-оптимізованого контенту для різних галузей.</p>
+                        </div>
+                    </div>
+                    <button class="viewAll"><span>Дивитися всіх</span></button>
                 </div>
             </section>
     </main>
